Вывод страниц с информацией о товарах и фото товаров.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,8 @@
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/TestDBSpringSecurity
+spring.datasource.url=jdbc:postgresql://localhost:5432/Shop_1
 spring.datasource.username=postgres
 spring.datasource.password=odin1odin
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.generate-ddl=true
+upload.path = F:/IntelliJ IDEA 2023.1/uploads
